<resources>
    <string name="log_in">log In</string>
    <string name="app_name">logIn</string>
    <string name="make_app">Make App</string>
    <string name="u_it">sign up</string>
    <string name="i_it">Make App</string>
    <string name="o_it">Make App</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="email_or_username">Email or UserName</string>
    <string name="password">Password</string>
    <string name="forgot_passwords">Forgot password ?</string>
    <string name="enter_email_or_phone_number">Enter Email or phone number</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="or">OR</string>
    <string name="todo">TODO</string>
    <string name="ssss">TODO</string>
    <string name="wwww">TODO</string>
    <string name="bun">TODO</string>
    <string name="cccc">TODO</string>
    <string name="shopster">Shopster</string>
    <string name="ooo">ooo</string>
    <string name="scan_item">Scan Item</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="view_cart">View Cart</string>
    <string name="scan_shop_code">Scan shop code</string>
    <string name="polpl">TODO</string>
    <string name="jhuj">TODO</string>
    <string name="hjhnjg">TODO</string>
    <string name="my_button_scan">scan</string>
    <string name="my_button_pay">pay</string>
    <string name="my_button_cart">cart</string>
    <string name="my_profile_view">View profile</string>
    <string name="my_button_scandata"> sacndata</string>
    <string name="my_horiview_home"></string>
    <string name="Register">Register</string>
    <string name="enter_email_">Enter Email</string>
</resources>